docker-iptables.conf
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:FILTERS - [0:0]
:DOCKER-USER - [0:0]

-F INPUT
-F DOCKER-USER
-F FILTERS

-A INPUT -i lo -j ACCEPT
-A INPUT -j FILTERS

-A DOCKER-USER -i ens18 -j FILTERS

-A FILTERS -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FILTERS -m state --state NEW -s 10.2.1.0/24 -m tcp -p tcp --dport 22 -j ACCEPT
-A FILTERS -m state --state NEW -s 10.2.1.0/24 -m tcp -p tcp --dport 443 -j ACCEPT
-A FILTERS -m state --state NEW -s 10.1.4.55/32 -m tcp -p tcp --dport 443 -j ACCEPT
-A FILTERS -m state --state NEW -s 10.2.1.0/24 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FILTERS -i ens18 -j REJECT

COMMIT
